external-crates/move/crates/move-compiler/tests/move_2024/typing/let_mut_shadow.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04024]: invalid usage of immutable variable
  ┌─ tests/move_2024/typing/let_mut_shadow.move:9:9
  │
3 │     public fun foo(x: u64) {
  │                    - To use the variable mutably, it must be declared 'mut', e.g. 'mut x'
  ·
9 │         x = x + 1;
  │         ^ Invalid assignment of immutable variable 'x'
